// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp/> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Kingdom Hearts"
      key="Kingdom Hearts"
    />
    <GifGrid
      category="Digimon"
      key="Digimon"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp/> debe mostrarse <GifExpertApp/> correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
